force-app/main/default/objects/WT_Style__c/WT_Style__c.object-meta.xml
<CustomObject>
    <description>Also known as Styles from WEATT.
Object created to house the style or product information. Data ultimately resides in M3.</description>
    <label>Style</label>
    <nameField>
        <label>Style Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Styles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>