force-app/main/default/objects/WT_Style__c/fields/Anti_Static__c.field-meta.xml
<CustomField>
    <fullName>Anti_Static__c</fullName>
    <label>Anti-Static</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>