force-app/main/default/objects/WT_Style__c/fields/Climate__c.field-meta.xml
<CustomField>
    <fullName>Climate__c</fullName>
    <label>Climate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extreme Cold</fullName>
            </value>
            <value>
                <fullName>Hot and humid</fullName>
            </value>
            <value>
                <fullName>Insulated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>