force-app/main/default/objects/WT_Style__c/fields/Footwear_Style__c.field-meta.xml
<CustomField>
    <fullName>Footwear_Style__c</fullName>
    <description>Type of Shoe from the Style table in WEATT</description>
    <inlineHelpText>The style of the shoe.</inlineHelpText>
    <label>Footwear Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6” lace</fullName>
            </value>
            <value>
                <fullName>8” lace</fullName>
            </value>
            <value>
                <fullName>Athletic</fullName>
            </value>
            <value>
                <fullName>Backpacking</fullName>
            </value>
            <value>
                <fullName>Big game boot</fullName>
            </value>
            <value>
                <fullName>Chukka</fullName>
            </value>
            <value>
                <fullName>Heritage 6” lace-up</fullName>
            </value>
            <value>
                <fullName>Heritage 8” lace-up</fullName>
            </value>
            <value>
                <fullName>Heritage chelsea</fullName>
            </value>
            <value>
                <fullName>Heritage chukka</fullName>
            </value>
            <value>
                <fullName>Heritage engineer</fullName>
            </value>
            <value>
                <fullName>Heritage oxford</fullName>
            </value>
            <value>
                <fullName>Hiker</fullName>
            </value>
            <value>
                <fullName>Hiking</fullName>
            </value>
            <value>
                <fullName>Insulated Pac</fullName>
            </value>
            <value>
                <fullName>Knee high waterproof</fullName>
            </value>
            <value>
                <fullName>Logger</fullName>
            </value>
            <value>
                <fullName>Oxford</fullName>
            </value>
            <value>
                <fullName>Performance Hiking</fullName>
            </value>
            <value>
                <fullName>Pull-on</fullName>
            </value>
            <value>
                <fullName>Romeo</fullName>
            </value>
            <value>
                <fullName>Rubber knee boot</fullName>
            </value>
            <value>
                <fullName>Slip-on</fullName>
            </value>
            <value>
                <fullName>Trail Running</fullName>
            </value>
            <value>
                <fullName>Upland boot</fullName>
            </value>
            <value>
                <fullName>Western lace-up</fullName>
            </value>
            <value>
                <fullName>Western pull-on</fullName>
            </value>
            <value>
                <fullName>Winter Hiking</fullName>
            </value>
            <value>
                <fullName>Zipper boot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>