force-app/main/default/objects/WT_Style__c/fields/Last__c.field-meta.xml
<CustomField>
    <fullName>Last__c</fullName>
    <description>Last is the name of the field in WEATT. Records information about the mold of shoe.</description>
    <inlineHelpText>Mold information about the shoe.</inlineHelpText>
    <label>Last</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arc Tempo</fullName>
            </value>
            <value>
                <fullName>Equalizer</fullName>
            </value>
            <value>
                <fullName>Immerse 360</fullName>
            </value>
            <value>
                <fullName>Perpetuum</fullName>
            </value>
            <value>
                <fullName>Summit</fullName>
            </value>
            <value>
                <fullName>Sundowner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>