force-app/main/default/objects/WT_Style__c/fields/Shoe_Size__c.field-meta.xml
<CustomField>
    <fullName>Shoe_Size__c</fullName>
    <description>Shoe size of the style being tested</description>
    <inlineHelpText>Shoe size of the style being tested</inlineHelpText>
    <label>Shoe Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>6.5</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>7.5</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>8.5</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>9.5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>10.5</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>11.5</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>12.5</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>13.5</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>