force-app/main/default/objects/WT_Style__c/fields/Shoe_Width__c.field-meta.xml
<CustomField>
    <fullName>Shoe_Width__c</fullName>
    <description>Width of the shoe being tested</description>
    <inlineHelpText>Width of the shoe being tested</inlineHelpText>
    <label>Shoe Width</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Narrow</fullName>
            </value>
            <value>
                <fullName>Wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>