force-app/main/default/objects/WT_Style__c/fields/Style_Gender__c.field-meta.xml
<CustomField>
    <fullName>Style_Gender__c</fullName>
    <description>Listed as &quot;Test Gender&quot; in WEATT. The gender of the shoe style</description>
    <inlineHelpText>Gender style of the shoe.</inlineHelpText>
    <label>Style Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>