force-app/main/default/objects/WT_Style__c/fields/Style_Number__c.field-meta.xml
<CustomField>
    <fullName>Style_Number__c</fullName>
    <description>7 digit Style number established by M3. The number may be left blank or may be a duplicate number.</description>
    <inlineHelpText>Style number of the product</inlineHelpText>
    <label>Style Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>