force-app/main/default/objects/WT_Style__c/fields/Water_Proof__c.field-meta.xml
<CustomField>
    <fullName>Water_Proof__c</fullName>
    <label>Water Proof</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>