force-app/main/default/objects/WT_Style__c/fields/WT_Model__c.field-meta.xml
<CustomField>
    <fullName>WT_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up relationship to link a Test Product to its higher level Test Model</description>
    <inlineHelpText>Look up relationship to link a Test Product to its higher level Test Model</inlineHelpText>
    <label>WT Model</label>
    <referenceTo>WT_Model__c</referenceTo>
    <relationshipLabel>Styles</relationshipLabel>
    <relationshipName>WT_Styles</relationshipName>
    <type>Lookup</type>
</CustomField>