force-app/main/default/objects/WT_Style__c/recordTypes/Garment_Test_Product.recordType-meta.xml
<RecordType>
    <fullName>Garment_Test_Product</fullName>
    <active>true</active>
    <description>Garment Test Product record type</description>
    <label>Garment Test Product</label>
</RecordType>