force-app/main/default/objects/WT_Style__c/recordTypes/Vasque_Test_Product.recordType-meta.xml
<RecordType>
    <fullName>Vasque_Test_Product</fullName>
    <active>true</active>
    <description>Vasque Test Product record type</description>
    <label>Vasque Test Product</label>
</RecordType>