force-app/main/default/objects/WT_Style__c/recordTypes/Wear_Test_Product.recordType-meta.xml
<RecordType>
    <fullName>Wear_Test_Product</fullName>
    <active>true</active>
    <description>Wear team Test Product record type</description>
    <label>Wear Test Product</label>
</RecordType>