force-app/main/default/objects/WT_Style__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Shoe_Size__c</columns>
    <columns>Last__c</columns>
    <columns>Footwear_Style__c</columns>
    <columns>Style_Gender__c</columns>
    <columns>Style_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>